# Revolution-Support

./: .env  .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  PLANS_SUMMARY.md  PLAN_01_Backend_Setup.md  PLAN_02_Discord_OAuth.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  alembic.ini  api_usage.json  api_usage.py  bot.py  bot_history.json  bot_history.py  bot_state.py  docker-compose.single.yml  fixes.json  pyproject.toml  requirements.txt
ai/: __init__.py  embeddings.py  router.py
ai/providers/: __init__.py  anthropic_provider.py  base.py  groq_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
bot/: __init__.py  __main__.py  cli.py  config.py  embed_builder.py  main.py  shard_manager.py
bot/cogs/: __init__.py  admin.py  disable.py  forum_commands.py  forums.py  knowledge.py  ping.py  research.py  settings.py  stats.py
bot/utils/: __init__.py  encryption.py
cache/: __init__.py  redis_client.py
config/: config.yaml  models.yaml
database/: __init__.py  connection.py  models.py
database/migrations/: env.py
database/migrations/versions/: 002_add_forum_tables.py  003_encrypt_api_keys.py
docker/: Dockerfile  README.md  docker-compose.yml
docker/k8s/: bot-deployment.yaml  bot-service.yaml  configmap.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml  research-worker-deployment.yaml
docs/: commands.md  getting-started.md  index.md
docs/configuration/: ai-models.md  cost-optimization.md  environment-variables.md
docs/deployment/: docker.md  kubernetes.md  monitoring.md  single-server.md
docs/features/: ai-support.md  forum-monitoring.md  keyword-routing.md  knowledge-base.md  subagent-research.md
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: ai.ts  analytics.ts  auth.ts  client.ts  knowledge.ts  tickets.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: avatar.tsx  button.tsx  card.tsx  input.tsx
frontend/src/pages/Admin/: Dashboard.tsx
frontend/src/pages/Auth/: AuthCallback.tsx  Login.tsx
frontend/src/pages/User/: Portal.tsx
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
keywords/: __init__.py  analytics.py  categories.py  classifier.py  engine.py
knowledge/: __init__.py  chunker.py  rag.py  search.py
migrations/: init.sql
modules/: __init__.py  ai_client.py  fix_store.py  prompts.py  thread_manager.py  trained_responses.py  utils.py
monitoring/: __init__.py  logging_config.py  metrics.py
research/: README.md  __init__.py  analyzer.py  requirements.txt  tasks.py  web_search.py  worker.py
scripts/: __init__.py  backup.sh  deploy.sh  import_verified_fixes.py  migrate_encrypt_api_keys.py  setup.sh
tests/: README.md  __init__.py  test_basic.py  test_web.py
web/: config.py  constants.py  dependencies.py  exceptions.py  main.py
web/models/: __init__.py  schemas.py  token.py
web/routers/: __init__.py  ai.py  analytics.py  auth.py  guilds.py  knowledge.py  tickets.py
web/services/: ai_router_service.py  auth_service.py  guild_context.py  oauth_service.py
